--- a/applepage.html
+++ b/applepage.html
@@ -75,18 +75,19 @@
     </section>
     
     <!--iphone 11 pro-->
-    <section class="hero iphone-11-pro">
-        <div class="container">
+    <section class="iphone-11-pro">
             <div class="title">
                 <h2 class="title-heading">iPhone 11 Pro</h2>
                 <h3 class="title-subheading">Pro cameras. Pro display. Pro performance. </h3> </h3>
                 <p class = "title-price"> From $24.95/mo. or $599 with trade-in.*</p>
             </div>
             <div class="cta">
-                <a href ="#" class="cta-link">Learn more</a>
-                <a href="#"  class="cta-link">Buy</a>
+                <a href ="#" class="cta-link">Learn more ></a>
+                <a href="#"  class="cta-link">Buy ></a>
             </div>
-        </div>
+            <div class = "img11">
+                <img src="5.png" alt="">
+            </div>
     </section>
 
     <main>
@@ -100,8 +101,8 @@
                     <h3 class="title-subheading-imac">Our most powerful pro lineup ever. Ready for our best work ever</h3> </h3>
                 </div>
                 <div class="cta">
-                    <a href ="#" class="cta-link">Learn more</a>
-                    <a href="#"  class="cta-link">Buy</a>
+                    <a href ="#" class="cta-link">Learn more ></a>
+                    <a href="#"  class="cta-link">Buy ></a>
                 </div>
                 <div class = "imacimage">
                 <figure><img src="1.png" alt=""></figure>
@@ -116,8 +117,8 @@
                 <h3 class="title-subheading-ipad">Like a computer. Unlike any computer </h3> 
             </div>
             <div class="cta">
-                <a href ="#" class="cta-link">Learn more</a>
-                <a href="#"  class="cta-link">Buy</a>
+                <a href ="#" class="cta-link">Learn more ></a>
+                <a href="#"  class="cta-link">Buy ></a>
             </div>
             <div class = "imacimage">
                 <figure><img src="2.png" alt=""></figure>
@@ -133,8 +134,8 @@
 
             </div>
             <div class="cta">
-                <a href ="#" class="cta-link">Learn more</a>
-                <a href="#"  class="cta-link">Buy</a>
+                <a href ="#" class="cta-link">Learn more ></a>
+                <a href="#"  class="cta-link">Buy ></a>
             </div>
             <div class = "imacimage">
                 <figure><img src="3.png" alt=""></figure>
@@ -149,8 +150,8 @@
                 <h3 class="title-subheading-iwatch">You've never seen a watch like this</h3>
             </div>
             <div class="cta">
-                <a href ="#" class="cta-link">Learn more</a>
-                <a href="#"  class="cta-link">Buy</a>
+                <a href ="#" class="cta-link">Learn more ></a>
+                <a href="#"  class="cta-link">Buy ></a>
             </div>
             <div class = "imacimage">
                 <figure><img src="4.png" alt=""></figure>
