--- a/applepage.html
+++ b/applepage.html
@@ -23,8 +23,8 @@
                         </div>
                     </li>
 
-                    <li class ="nav-item">
-                    <a href="applepage.html" class="nav-link nav-link-apple"></a>
+                    <li class ="nav-show">
+                    <a href="applepage.html" class="nav-link nav-link-apples"></a>
                     </li>
                 </ul>
 
@@ -85,8 +85,8 @@
                 <a href ="#" class="cta-link">Learn more ></a>
                 <a href="#"  class="cta-link">Buy ></a>
             </div>
-            <div class = "img11">
-                <img src="5.png" alt="">
+            <div >
+                <img class = "img11" src="5.png" alt="">
             </div>
     </section>
 
